--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,12 @@
 body
 {
-    text-align: center;
+    text-align:  center;
     font-family: "Arial";
-    color: deepPink;
+    color: #333;
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid;
 }
