--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,20 @@ body
     font-family: "Arial";
     color: #333;
 }
+#cabecera{
+    background: #338;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
+}
+
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container{
     width: 70%;
     padding: 1em;
