--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     text-align:  center;
     font-family: "Arial";
-    color: red;
+    color: green;
 }
 #cabecera{
     background: #338;
